--- a/templates/admin/addlot.html
+++ b/templates/admin/addlot.html
@@ -10,7 +10,7 @@
 
 
     <div style="padding: 50px;" class="d-flex justify-content-center align-items-center min-vh-50">
-        <form class="border p-4 bg-white rounded shadow" style="width: 100%; max-width: 700px;">
+        <form id="lotForm" class="border p-4 bg-white rounded shadow" style="width: 100%; max-width: 700px;">
             <div class="row mb-3">
                 <label for="locationName" class="col-sm-2 col-form-label">Location Name</label>
                 <div class="col-sm-10">
@@ -43,13 +43,13 @@
             </div>
       <span>
         <button id="update" type="submit" class="btn btn-primary" >Update</button>
-        <button id="cancel" type="submit" class="btn btn-primary" >Cancel</button>
+        <button id="cancel" type="button" class="btn btn-primary" onclick="window.location.href='/admin/dashboard'">Cancel</button>
       </span>
     </form>
   </div>
 
   <script>
-    document.getElementById('update').addEventListener('submit', async function (e) {
+    document.getElementById('lotForm').addEventListener('submit', async function (e) {
         e.preventDefault();
 
         const locationName = document.getElementById('locationName').value;
@@ -73,6 +73,13 @@
         });
 
         const result = await response.json();
+        if(result.status == "success") {
+            alert(result.message)
+            window.location.href = '{{url_for("admin.dashboard")}}'
+        }
+        else {
+            alert("Failed to Add Lot")
+        }
         alert(result.message);  // Show backend response
     });
   </script>  
