--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,17 +9,17 @@ body {
   box-shadow: 0px 0px 10px #ccc;
 }
 
-.parking-lot {
-             border: 10px solid #ccc;
+.parking_lot {
+    border: 10px solid #ccc;
     border-radius: 10px;
     padding: 20px;
     margin: 20px auto;
-    width: 80%;
+    width: 30vw;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
 }
+
 .spot {
-            display: flex;
+    display: flex;
     flex-wrap: wrap;
     gap: 10px;
     margin-top: 10px;
@@ -34,6 +34,11 @@ body {
     font-weight: bold;
     color: white;
   }
+
 .available { background-color: lightgreen; border: 2px solid green; }
 .occupied { background-color: pink; border: 2px solid red; }
+
+.btn_add_lot {
+  background-color: bisque;
+}
 
