--- a/templates/admin/editParkinglot.html
+++ b/templates/admin/editParkinglot.html
@@ -10,7 +10,7 @@
 
 
     <div style="padding: 50px;" class="d-flex justify-content-center align-items-center min-vh-50">
-        <form id="lotForm" class="border p-4 bg-white rounded shadow" style="width: 100%; max-width: 700px;">
+        <form id="lotForm" class="border p-4 bg-gradient rounded-5 shadow" style="width: 100%; max-width: 700px;">
             <div class="row mb-3">
                 <label for="locationName" class="col-sm-2 col-form-label">Location Name</label>
                 <div class="col-sm-10">
