--- a/templates/dashboard/admin_dashboard.html
+++ b/templates/dashboard/admin_dashboard.html
@@ -26,7 +26,7 @@
       <div class="spot">
         {% for spot in lot.spots %}
           {% if spot[2] == 'O' %}
-            <div class="Occupied">O</div>
+            <div onclick="" class="Occupied">O</div>
           {% else %}
             <div class="available">A</div>
           {% endif %}
