--- a/templates/dashboard/admin_dashboard.html
+++ b/templates/dashboard/admin_dashboard.html
@@ -26,9 +26,9 @@
       <div class="spot">
         {% for spot in lot.spots %}
           {% if spot[2] == 'O' %}
-            <div onclick="" class="Occupied">O</div>
+            <div onclick="window.locatioN.href='/admin/viewSpot?spot_id={{ spot[0] }}&lot_id={{ lot.lot[0] }}'" class="Occupied">O</div>
           {% else %}
-            <div class="available">A</div>
+            <div onclick="window.locatioN.href='/admin/viewSpot?spot_id={{ spot[0] }}&lot_id={{ lot.lot[0] }}'" class="available">A</div>
           {% endif %}
         {% endfor %}
       </div>
