--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,10 @@ body {
 .available { background-color: lightgreen; border: 2px solid green; }
 .occupied { background-color: pink; border: 2px solid red; }
 
+.available, .Occupied {
+  cursor: pointer;
+}
+
 .btn_add_lot {
   background-color: bisque;
 }
@@ -52,3 +56,23 @@ body {
   border-radius: 10px;
 }
 
+.view-Spot {
+  margin: 250px auto 20px auto;
+  border: 20px rgb(50, 48, 48);
+  padding: 20px;
+  width: 25vw;
+  box-shadow: 10px 5px 5px rgb(77, 76, 76);
+  /* box-shadow: 0 0 2px 2px red;  */
+  border-radius: 10px;
+}
+
+.title {
+      background-color: #ffe79b;
+      border: 2px solid black;
+      border-radius: 10px;
+      text-align: center;
+      padding: 10px;
+      font-weight: bold;
+      font-size: 18px;
+      margin-bottom: 20px;
+    }
