--- a/templates/admin/editParkinglot.html
+++ b/templates/admin/editParkinglot.html
@@ -2,12 +2,7 @@
 
 {% block content %}
 
-    <div style="align-items: center;" class="card">
-        <div class="card-body">
-            <h2>Edit Parking Lot</h2>
-        </div>
-    </div>
-
+    <div class="title"> Edit Parking Lot </div>
 
     <div style="padding: 50px;" class="d-flex justify-content-center align-items-center min-vh-50">
         <form id="lotForm" class="border p-4 bg-gradient rounded-5 shadow" style="width: 100%; max-width: 700px;">
