--- a/templates/dashboard/admin_dashboard.html
+++ b/templates/dashboard/admin_dashboard.html
@@ -2,11 +2,7 @@
 
 {% block content %}
 
-<div style="align-items: center;" class="card">
-  <div class="card-body">
-    <h2 >Parking Lots</h2>
-  </div>
-</div>
+ <div class="title"> Parking Lots </div>
 
 <!-- Button at the bottom -->
 <div class="mt-auto p-3 text-center">
