--- a/templates/admin/addlot.html
+++ b/templates/admin/addlot.html
@@ -2,11 +2,7 @@
 
 {% block content %}
 
-    <div style="align-items: center;" class="card">
-        <div class="card-body">
-            <h2>New Parking Lots</h2>
-        </div>
-    </div>
+    <div class="title"> Add New Parking Lot </div>
 
 
     <div style="padding: 50px;" class="d-flex justify-content-center align-items-center min-vh-50">
