--- a/templates/admin/viewSpot.html
+++ b/templates/admin/viewSpot.html
@@ -7,13 +7,17 @@
         <form method="post" action="{{ url_for('admin.viewSpot', lot_id=lot_id,spot_id=spot_id,status=status) }}">
             <div class = "view-Spot">
                 <div class="field">
-                    <span class="field-label">ID :</span>
-                    <input class="input-box" type="text" name="spot_id" id="spot_id" value="{{ spot_id }}" readonly>
+                    <div class = "col-sm-10">
+                    <span class="field-label">ID : </span>
+                        <input class="input-box" type="text" name="spot_id" id="spot_id" value="{{ spot_id }}" readonly>
+                    </div>
                 </div>
                 <br>
                 <div class="field">
+                    <div class = "col-sm-10">
                     <span class="field-label">Status :</span>
-                    <input class="input-box" type="text" name="status" id="status" value="{{ status }}" readonly>
+                        <input class="input-box" type="text" name="status" id="status" value="{{ status }}" readonly>
+                    </div>
                 </div>
                 <br>
                 <div>
