--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,7 @@
         <a class="nav-link" href="{{ url_for('admin.dashboard') }}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('user.dashboard') }}">Users</a>
+        <a class="nav-link" href="{{ url_for('admin.viewUsers') }}">Users</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Search</a>
