--- a/templates/admin/viewSpot.html
+++ b/templates/admin/viewSpot.html
@@ -21,10 +21,10 @@
                 </div>
                 <br>
                 <div>
-                    {%if status == 'A'%}
-                        <button type="submit" class="btn btn-outline-danger"> Delete </button>
+                    {%if status == 'A' %}
+                        <button type="submit" class="btn btn-outline-danger"><b>Delete</b></button>
                     {% endif %}
-                        <button type="button"  onclick="window.location.href='/admin/dashboard'" class="btn btn-outline-secondary">Close</button>
+                        <button type="button"  onclick="window.location.href='/admin/dashboard'" class="btn btn-outline-secondary"><b>Close</b></button>
                 </div>
             </div>
         </form>
