--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
- 
+
+     <div class="title">Vehicle Parking System</div>
     <div class="container mt-5">
         {% with messages = get_flashed_messages() %}
           {% if messages %}
