--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,7 @@ body {
     margin: 20px auto;
     width: 25vw;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: beige;
 }
 
 .spot {
@@ -49,15 +50,16 @@ body {
 .delete-confirmation-box {
   margin: 250px auto 20px auto;
   border: 20px red;
-  padding: 20px;
-  width: 25vw;
+  padding: 30px;
+  width: 30vw;
   box-shadow: 10px 5px 5px red;
   /* box-shadow: 0 0 2px 2px red;  */
   border-radius: 10px;
+  background-color:beige;
 }
 
 .view-Spot {
-  background-color: #B8CFCE;
+  background-color: beige;
   margin: 250px auto 20px auto;
   border: 20px rgb(50, 48, 48);
   padding: 20px;
@@ -84,5 +86,4 @@ body {
   margin: 100px;
   width: 90vw;
   border: 2px solid black;
-  background-color: #B8CFCE;
 }
