--- a/templates/admin/confirm_delete.html
+++ b/templates/admin/confirm_delete.html
@@ -9,7 +9,7 @@
 
     <form method="post" action="{{ url_for('admin.deletelot', lot_id=lot_id) }}">
         <div class = "delete-confirmation-box">
-            <h3>Are you sure you want to delete the Parking Lot {{ lot_id }}?</h3>
+            <h3>Do you want to delete Parking Lot {{ lot_id }}?</h3>
             <br>
             <span>
                 <button type="submit" class="btn btn-outline-danger"><span class="bold-text">Delete</span></button>
