--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,7 +33,7 @@
         <a class="nav-link" href="#">Summary</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="{{ url_for('auth.login')}}">Logout</a>
       </li>
     </ul>
   </div>
