--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -45,13 +45,13 @@
   class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home </a>
+        <a class="nav-link" href="{{ url_for('user.dashboard') }}">Home </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Summary</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="{{ url_for('auth.login')}}">Logout</a>
       </li>
     </ul>
   </div>
