--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,7 +60,7 @@ body {
 
 .view-Spot {
   background-color: beige;
-  margin: 250px auto 20px auto;
+  margin: 150px auto 20px auto;
   border: 20px rgb(50, 48, 48);
   padding: 20px;
   width: 25vw;
@@ -68,6 +68,7 @@ body {
   /* box-shadow: 0 0 2px 2px red;  */
   border-radius: 10px;
   font-weight: bold;
+  align-items: center;
 }
 
 .title {
