--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 .delete-confirmation-box {
-  margin: 250px auto 20px auto;
+  margin: 150px auto 20px auto;
   border: 20px red;
   padding: 30px;
   width: 30vw;
@@ -74,7 +74,7 @@ body {
 .title {
       background-color: #393E46;
       border: 2px solid black;
-      border-radius: 10px;
+      /* border-radius: 10px; */
       text-align: center;
       padding: 20px;
       font-weight: bold;
