--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -62,6 +62,9 @@
   class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
+        <a class="nav-link" href="{url_for('user.addVehicle')}">Add Vehicle</a>
+      </li>
+      <li class="nav-item active">
         <a class="nav-link" href="#">Edit Profile</a>
       </li>
     </ul>
