--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
     <input type="password" name="password" class="form-control" required />
   </div>
   <div class="mb-3">
-    <label>FullName</label>
+    <label>Name</label>
     <input type="text" name="fullname" class="form-control" required />
   </div>
   <div class="mb-3">
