--- a/templates/user/add_vehicle.html
+++ b/templates/user/add_vehicle.html
@@ -1,5 +1,58 @@
 {% extends "navbar.html" %}
 
 {% block content %}
-    
+
+    <div class="title"> Add Vehicle </div>
+
+    <div style="padding: 50px;" class="d-flex justify-content-center align-items-center min-vh-50">
+        <form id="lotForm" class="border p-4 bg-gradient rounded-5 shadow" style="width: 100%; max-width: 700px;">
+            <div class="row mb-3">
+                <label for="locationName" class="col-sm-2 col-form-label"> User Id:  </label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="user_id" value="{{ user_id }}" readonly>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="address" class="col-sm-2 col-form-label"> Vehicle Number </label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="vehicle_number" required>
+                </div>
+            </div>
+            
+            <span>
+                <button id="update" type="submit" class="btn btn-primary" >Update</button>
+                <button id="cancel" type="button" class="btn btn-primary" onclick="window.location.href='/admin/dashboard'">Cancel</button>
+            </span>
+    </form>
+  </div>
+
+  <script>
+    document.getElementById('lotForm').addEventListener('submit', async function (e) {
+        e.preventDefault();
+
+        const user_id = document.getElementById('user_id').value;
+        const vehicle_number = document.getElementById('vehicle_number').value;
+
+        const response = await fetch('{{ url_for("admin.addVehicle") }}', {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ 
+            user_id: user_id,
+            vehicle_number: vehicle_number
+         })
+        });
+
+        const result = await response.json();
+        if(result.status == "success") {
+            window.location.href = '{{url_for("admin.dashboard")}}'
+        }
+        else {
+            alert("Failed to Add Lot")
+        }
+        alert(result.message);  // Show backend response
+    });
+  </script>
+
 {% endblock %}
