--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #f5f5f5;
+  justify-content: center;
 }
 .container {
   max-width: 500px;
@@ -84,7 +85,25 @@ body {
     }
 
 .table-css{
-  margin: 100px;
+  margin: 50px;
+  justify-content: center;
   width: 90vw;
   border: 2px solid black;
+}
+
+.search_location span {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+     /* space between text and input */
+}
+
+.search_location p {
+    margin: 0; /* remove default margin */
+}
+
+.center-wrapper {
+    display: flex;
+    justify-content: center;        /* center horizontally */
+    align-items: center;            /* center vertically */
 }
