--- a/templates/dashboard/user_dashboard.html
+++ b/templates/dashboard/user_dashboard.html
@@ -38,25 +38,28 @@
             </div>
         </div>
 
-        <table class="table table-striped table-active table-responsive table-css table-bordered ">
+        <table style="text-align: center;" class="table table-striped table-css table-bordered ">
                 <thead>
                     <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Address</th>
-                    <th scope="col">Availabilty</th>
-                    <th scope="col">Action</th>
+                        <th scope="col">Id</th>
+                        <th scope="col">Address</th>
+                        <th scope="col">Availabilty</th>
+                        <th scope="col">Action</th>
                     </tr>
                 </thead>
-                <!-- <tbody>
-                    {% for user in users_data %}
+                <tbody>
+                    {% for lot in availability_data %}
                         <tr>
-                            <th scope="row">{{ user[0] }}</th>
-                            <td>{{ user[1] }}</td>
-                            <td>{{ user[3] }}</td>
-                            <td>{{ user[4] }}</td>
-                            <td>{{ user[5] }}</td>
+                            <th scope="row">{{ lot[0] }}</th>
+                            <td>{{ lot[1] }}</td>
+                            <td>{{ lot[2] }}</td>
+                            <td>
+                                <form method="post" action="{{ url_for ('user.bookSpot') }}">
+                                    <input type="hidden" value="{{ lot[0] }}"/>
+                                    <button type="button" class="btn btn-success"> Book </button>  
+                                </form>
                         </tr>
                     {% endfor %}
-                </tbody> -->
+                </tbody>
             </table>
 {% endblock %}
