--- a/templates/dashboard/user_dashboard.html
+++ b/templates/dashboard/user_dashboard.html
@@ -56,6 +56,7 @@
                             <td>
                                 <form method="post" action="{{ url_for ('user.bookSpot') }}">
                                     <input type="hidden" id="lot_id" value="{{ lot[0] }}"/>
+                                    <input type="hidden" id="locationName" val="{{ lot[1] }}"/>
                                     <button type="button" class="btn btn-success"> Book </button>  
                                 </form>
                         </tr>
