--- a/templates/user/book_Spot.html
+++ b/templates/user/book_Spot.html
@@ -10,7 +10,7 @@
             <div class="row mb-3">
                 <label for="userId" class="col-sm-2 col-form-label">User Id</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" id="userId" value="" >
+                    <input type="number" class="form-control" id="userId" value="{{ user_id }}" >
                 </div>
             </div>
             <div class="row mb-3">
@@ -22,13 +22,13 @@
             <div class="row mb-3">
                 <label for="spotId" class="col-sm-2 col-form-label">Spot Id</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="spotId" value="" readonly>
+                    <input type="text" class="form-control" id="spotId" value="{{ spot_id }}" readonly>
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="lotId" class="col-sm-2 col-form-label">Lot Id</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" id="lotId" value="" readonly>
+                    <input type="number" class="form-control" id="lotId" value="{{ lot_id }}" readonly>
                 </div>
             </div>
             <div class="row mb-3">
