--- a/templates/dashboard/admin_dashboard.html
+++ b/templates/dashboard/admin_dashboard.html
@@ -22,7 +22,7 @@
       <div class="spot">
         {% for spot in lot.spots %}
           {% if spot[2] == 'O' %}
-            <div onclick="window.location.href='/admin/viewSpot?spot_id={{ spot[1] }}&lot_id={{ lot.lot[0] }}&status={{ spot[2] }}'" class="Occupied">O</div>
+            <div onclick="window.location.href='/admin/viewSpot?spot_id={{ spot[1] }}&lot_id={{ lot.lot[0] }}&status={{ spot[2] }}'" class="occupied">O</div>
           {% else %}
             <div onclick="window.location.href='/admin/viewSpot?spot_id={{ spot[1] }}&lot_id={{ lot.lot[0] }}&status={{ spot[2] }}'" class="available">A</div>
           {% endif %}
