--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,7 +27,7 @@ body {
     margin-top: 10px;
 }
 
-.Occupied, .available {
+.occupied, .available {
     width: 40px;
     height: 40px;
     text-align: center;
@@ -40,7 +40,7 @@ body {
 .available { background-color: lightgreen; border: 2px solid green; }
 .occupied { background-color: pink; border: 2px solid red; }
 
-.available, .Occupied {
+.available, .occupied {
   cursor: pointer;
 }
 
