--- a/templates/dashboard/user_dashboard.html
+++ b/templates/dashboard/user_dashboard.html
@@ -14,17 +14,21 @@
                     <th scope="col">Action</th>
                     </tr>
                 </thead>
-                <!-- <tbody>
-                    {% for user in users_data %}
+                <tbody>
+                    {% for parking in user_parking_data %}
                         <tr>
-                            <th scope="row">{{ user[0] }}</th>
-                            <td>{{ user[1] }}</td>
-                            <td>{{ user[3] }}</td>
-                            <td>{{ user[4] }}</td>
-                            <td>{{ user[5] }}</td>
+                            <th scope="row">{{ parking[0] }}</th>
+                            <td>{{ parking[1] }}</td>
+                            <td>{{ parking[2] }}</td>
+                            <td>{{ parking[3] }}</td>
+                            {% if parking[4] == 'O' %}
+                                <td><button type="submit" class="btn btn-danger"> Release Out </button></td>
+                            {% else %}
+                                <td><button type="submit" class="btn btn-success"> Parked Out </button></td>
+                            {% endif %}
                         </tr>
                     {% endfor %}
-                </tbody> -->
+                </tbody>
         </table>
 
         <hr style="height: 5px; background-color: black; border: none;">
