--- a/templates/user/book_Spot.html
+++ b/templates/user/book_Spot.html
@@ -10,27 +10,27 @@
             <div class="row mb-3">
                 <label for="locationName" class="col-sm-2 col-form-label">Location Name:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="locationName" value="{{ location_name }}" readonly>
+                    <input type="text" class="form-control" id="locationName" name="locationName" value="{{ location_name }}" readonly>
                 </div>
             </div>
 
             <div class="row mb-3">
                 <label for="userId" class="col-sm-2 col-form-label">User Id :</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" id="userId" value="{{ user_id }}" readonly>
+                    <input type="number" class="form-control" id="userId" name="user_id" value="{{ user_id }}" readonly>
                 </div>
             </div>
             
             <div class="row mb-3">
                 <label for="spotId" class="col-sm-2 col-form-label">Spot Id :</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="spotId" value="{{ spot_id[0] }}" readonly>
+                    <input type="text" class="form-control" id="spotId" name="spot_id" value="{{ spot_id[0] }}" readonly>
                 </div>
             </div>
             <div class="row mb-3">
                 <label for="lotId" class="col-sm-2 col-form-label">Lot Id :</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" id="lotId" value="{{ lot_id }}" readonly>
+                    <input type="number" class="form-control" id="lotId" name="lot_id" value="{{ lot_id }}" readonly>
                 </div>
             </div>
             
@@ -52,18 +52,18 @@
   </div>
 
   <script >
-    document.getElementbyID('lotForm').addEventListener('submit', async function (e) {
+    document.getElementById('lotForm').addEventListener('submit', async function (e) {
         e.preventDefault();
 
         const locationName = document.getElementById('locationName').value;
         const user_id = document.getElementById('userId').value;
         const lot_id = document.getElementById('lotId').value;
         const spot_id = document.getElementById('spotId').value;
-        const vehicle_number = document.getElementbyID('vehicleNumber').value;
+        const vehicle_number = document.getElementById('vehicleNumber').value;
         
-        const response = await fetch('{{ url_for("user.confirmBooking")}}',{
+        const response = await fetch('{{ url_for("user.confirmBooking") }}', {
             method: 'POST',
-            headers:{
+            headers: {
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({
@@ -76,12 +76,12 @@
         });
 
         const result = await response.json();
-        if(result.status == "success") {
-            alert(result.message)
-            window.location.href = '{{url_for("user.dashboard")}}'
+        if(result.status === "success") {
+            alert(result.message);
+            window.location.href = '{{ url_for("user.dashboard") }}';
         }
         else {
-            alert(result.message)
+            alert(result.message);
         }
     });
   </script>
