--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <title>Vehicle Parking System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoR1rQb5z3yA5v02jcCPu+91+Vy38K5tXDUZbQGxQvZ6jIW"
+        crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
 
      <div class="title">Vehicle Parking System</div>
-    <div class="container mt-5">
-        {% with messages = get_flashed_messages() %}
-          {% if messages %}
-            <div class="alert alert-warning">{{ messages[0] }}</div>
-          {% endif %}
-        {% endwith %}
+     <div class="container mt-5">
+        
         {% block content %}{% endblock %}
     </div>
 </body>
