--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,6 +5,8 @@
     <title>Vehicle Parking System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -27,10 +29,7 @@
         <a class="nav-link" href="{{ url_for('admin.viewUsers') }}">Users</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Search</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Summary</a>
+        <a class="nav-link" href="{{ url_for('admin.summary') }}">Summary</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('auth.login')}}">Logout</a>
