--- a/templates/dashboard/user_dashboard.html
+++ b/templates/dashboard/user_dashboard.html
@@ -23,7 +23,11 @@
                             <td>{{ parking[3] }}</td>
                             {% if parking[4] == 'O' %}
                                 <td>
-                                    <form>
+                                    <form method="post" action="{{ url_for ('user.ReleaseSpot') }}">
+                                        <input type="hidden" name="spot_id" value="{{ parking[0] }}"/>
+                                        <input type="hidden" name="vehicle_number" value="{{ parking[1]}}"/>
+                                        <input type="hidden" name="lot_id" value="{{ parking[5] }}"/>
+                                        <input type="hidden" name="parking_time" value="{{ parking[3] }}"/>
                                         <button type="submit" class="btn btn-danger"><b> Release Out </b></button></td>
                                     </form>
                             {% else %}
@@ -39,7 +43,7 @@
         <div class="center-wrapper">
             <div class = "search_location">
                 <span>
-                    <h5><b>Search Parking @location/Pincode: </b></h5>
+                    <h5><b>Search Parking @Location :</b></h5>
                     <input type="text" id="searchInput" onkeyup="filterTable()">
                 </span>
             </div>
